Tested composer installation and autoloading
Signed-off-by: Alexander Kluth <contact@alexanderkluth.com>

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "email": "katzgrau@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-0": { "Katzgrau\\KLogger": "src" }
+    },
     "require": {
 
     }
