--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,24 @@
 {
-    "name": "katzgrau/klogger",
-    "description": "A Simple Logging Class For PHP",
+    "name": "deralex/eklogger",
+    "description": "A simple yet powerful logging class",
     "license": "MIT",
     "authors": [
+        {
+            "name": "Alexander Kluth",
+            "email": "contact@alexanderkluth.com"
+        },
         {
             "name": "Kenny Katzgrau",
             "email": "katzgrau@gmail.com"
         }
     ],
     "autoload": {
-        "psr-0": { "Katzgrau\\KLogger": "src" }
+        "psr-0": { "DerAlex\\EKLogger": "src" }
     },
     "require": {
 
+    },
+    "require-dev": {
+        "phpspec/phpspec": "2.0.x-dev"
     }
 }
