Adding the Katzgrau\KLogger namespace and renaming KLogger to Logger.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,11 @@
             "name": "Dan Horrigan",
             "email": "dan@dhorrigan.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Katzgrau\\KLogger\\": "src/"
+        },
+        "classmap": ["src/"]
+    }
 }
