--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "require": {
         "psr/log": "1.0.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.0.*"
+    },
     "license": "MIT",
     "authors": [
         {
