--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "psr/log": "^1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "^6.0.0"
     },
     "license": "MIT",
     "authors": [
